--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "cors": "^2.8.5",
     "expect.js": "^0.3.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
