--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mocha": "^10.4.0",
     "mochawesome": "^7.1.3",
     "mochawesome-report-generator": "^6.2.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
