--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,4 +46,5 @@ jobs:
         echo BASE_URL="http://localhost" >> .env
     - run: npm ci
     - run: npm run build --if-present
+    - run: npm start
     - run: npm test
