--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,6 +45,8 @@ jobs:
         echo PORT=3000 >> .env
         echo BASE_URL="http://localhost" >> .env
     - run: npm ci
+    - name: Run migrations
+      run: npm run migrate    
     - run: npm run build --if-present
     - run: npm start
     - run: npm test
