--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,8 +45,8 @@ jobs:
         echo PORT=3000 >> .env
         echo BASE_URL="http://localhost" >> .env
     - run: npm ci
-    - name: Run migrations
-      run: prisma migrate --name testing
+    - run: npx prisma generate
+    - run: npx prisma migrate dev
     - run: npm run build --if-present
     - run: npm start
     - run: npm test
