--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,5 +48,8 @@ jobs:
     - run: npx prisma generate
     - run: npx prisma migrate dev
     - run: npm run build --if-present
-    - run: npm start
+    - name: Start server
+      run: |
+        npm start &
+        sleep 5 # give server some time to start
     - run: npm test
