externalisation des parametres des jobs

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,20 @@ SECRETID=""
 
 PORT=
 BASE_URL=""
+
+# CLEANER JOB : le job est executé toutes les 5 heures 
+# et supprime les données plus anciennes que 5 heures
+CLEANER_CRON='0 */5 * * *'
+CLEANER_DELETE_AFTER_HOURS=5
+
+# les données CPU sont enregistrées toutes les 5 secondes
+CPU_CRON='*/5 * * * * *'
+
+# les données RAM sont enregistrées toutes les 5 secondes
+RAM_CRON='*/5 * * * * *'
+
+# les données DISK sont enregistrées toutes les 5 secondes
+DISK_CRON='*/5 * * * * *'
+
+# les données dockers sont enregistrées toutes les 2 minutes 
+DOCKER_CRON='*/2 * * * *'
