--- a/.env.sample
+++ b/.env.sample
@@ -17,14 +17,10 @@ BASE_URL=""
 CLEANER_CRON='0 */5 * * *'
 CLEANER_DELETE_AFTER_HOURS=5
 
-# les données CPU sont enregistrées toutes les 5 secondes
-CPU_CRON='*/5 * * * * *'
+# CLEANER JOB : le job est executé toutes les 2 heures 
+# et supprime les données plus anciennes que 1 heures
+CLEANER_CRON='0 */2 * * *'
+CLEANER_DELETE_AFTER_HOURS=1
 
-# les données RAM sont enregistrées toutes les 5 secondes
-RAM_CRON='*/5 * * * * *'
-
-# les données DISK sont enregistrées toutes les 5 secondes
-DISK_CRON='*/5 * * * * *'
-
-# les données dockers sont enregistrées toutes les 2 minutes 
-DOCKER_CRON='*/2 * * * *'
+# les données sont enregistrées toutes les 5 secondes
+WRITER_CRON='*/5 * * * * *'
