--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "servermetrics",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "simple serveur interne de monitoring (cpu, ram, disk, docker) avec des api rest",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,16 @@
     "test": "mocha --env-file=.env **/*.spec.js --reporter mochawesome -r dotenv/config",
     "report": "mocha --reporter mochawesome"
   },
-  "keywords": ["nodejs", "express", "prisma", "node-schedule","postgresql", "swagger", "rest", "api"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "prisma",
+    "node-schedule",
+    "postgresql",
+    "swagger",
+    "rest",
+    "api"
+  ],
   "author": "Lgrdev",
   "license": "ISC",
   "dependencies": {
@@ -17,9 +26,10 @@
     "expect.js": "^0.3.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "node-disk-info": "^1.3.0",
+    "moment": "^2.30.1",
     "node-schedule": "^2.1.1",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "systeminformation": "^5.22.9"
   },
   "devDependencies": {
     "axios": "^1.6.8",
